# wbEmotionSynth

./: CMakeLists.txt  README.md
include/iCub/: emotionSynthModule.h  emotionSynthRatethread.h
src/: emotionSynthModule.cpp  emotionSynthRatethread.cpp  main.cpp
